chore: ignore jest transform cache and haste map in version control
